# mcp-optimizer

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  Taskfile.yml  cr.yaml  generate_toolhive_models.sh  index.yaml  local-values.yaml  pyproject.toml
.claude/: settings.json
.github/workflows/: claude-code-review.yml  claude-code-test-harness.yml  claude.yml  code-checks.yml  code-quality.yml  download-models.yml  helm-charts-main.yml  image-build.yml  integration-tests.yml  main-and-pr.yml  mcp-malt-integration-tests.yml  mcp-tef-integration-tests.yml  offline-tests.yml  release.yml  releaser-helm-charts.yml  security.yml  update-thv-models.yml
.specify/memory/: constitution.md
docs/: connection-resilience.md  group-filtering.md  helm-deployment.md  in-cluster-authentication.md  kubernetes-integration.md  runtime-modes.md
examples/anthropic_comparison/: README.md  comparison_orchestrator.py  download_data.sh  ingest_test_data.py  mcp_optimizer_agent.py  metrics.py  models.py  native_approach.py  results_exporter.py  tool_converter.py  tool_search_comparison.py
examples/call_tool_optimizer/: .env.example  README.md  __init__.py  agent_messsge_processing.py  appworld_agent.py  appworld_helper.py  appworld_tool_loader.py  baseline_agent.py  experiment_runner.py  models.py  run_experiment.py  sample_responses.py
examples/mcp-servers/: README.md  apply-mcp-servers.sh  create-github-secrets.sh  delete-mcp-servers.sh  ingress.yaml  mcpgroup_optimized.yaml  mcpserver_fetch.yaml  mcpserver_github.yaml  mcpserver_mcp-optimizer-vmcp.yaml  mcpserver_mcp-optimizer.yaml  mcpserver_toolhive-doc-mcp.yaml  shared-serviceaccount.yaml  status-mcp-servers.sh  vmcp-github-fetch.yaml
helm/: README.md
helm/mcp-optimizer/: Chart.yaml  QUICKSTART.md  README.md  values.yaml
helm/mcp-optimizer/examples/: values-development.yaml  values-single-namespace.yaml  values-with-group-filtering.yaml  values-with-persistence.yaml
helm/mcp-optimizer/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  mcpserver.yaml  networkpolicy.yaml  pvc.yaml  serviceaccount.yaml
migrations/: env.py
migrations/versions/: 2025_08_18_0743-d2977d4c8c53_create_initial_tables.py
scripts/: download_models.py  generate_toolhive_models.sh  test-offline.sh
specs/001-fix-remote-workload-matching/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-remote-workload-matching/checklists/: requirements.md
specs/001-fix-remote-workload-matching/contracts/: toolhive-api.md
specs/002-split-db-tables/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-split-db-tables/checklists/: requirements.md
specs/002-split-db-tables/contracts/: ops-interfaces.md
specs/002-token-savings-metrics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-token-savings-metrics/checklists/: requirements.md
specs/002-token-savings-metrics/contracts/: find_tool_response.json
src/mcp_optimizer/: cli.py  config.py  configure_logging.py  embeddings.py  ingestion.py  install.py  mcp_client.py  polling_manager.py  server.py  token_counter.py  token_limiter.py
src/mcp_optimizer/db/: base_server_ops.py  base_tool_ops.py  config.py  exceptions.py  models.py  registry_server_ops.py  registry_tool_ops.py  tool_response_ops.py  workload_server_ops.py  workload_tool_ops.py
src/mcp_optimizer/response_optimizer/: __init__.py  classifier.py  hints.py  models.py  optimizer.py  query_executor.py  token_counter.py
src/mcp_optimizer/response_optimizer/summarizers/: __init__.py  base.py  llmlingua.py  truncation.py
src/mcp_optimizer/response_optimizer/traversers/: __init__.py  base.py  json_traverser.py  markdown_traverser.py  (+1 more)
src/mcp_optimizer/toolhive/: enums.py  k8s_client.py  toolhive_client.py
tests/: conftest.py  integration_test.py  test_cli_options.py  test_config.py  test_config_basic.py  test_embeddings.py  test_group_filtering.py  test_ingestion.py  test_install.py  test_k8s_client.py  test_mcp_client.py  test_mcpserver_crud.py  test_models.py  test_polling_manager.py  test_runtime_mode_env.py  test_server.py  test_token_limiter.py  test_tool_crud.py  test_toolhive_client.py  test_toolhive_retry.py
tests/summarize_data/: json_gh_output.json  txt_output.txt
tests/unit/: test_crud.py  test_ingestion.py  test_models.py  test_token_counter.py
tests/unit/test_response_optimizer/: __init__.py  conftest.py  test_classifier.py  test_json_traverser.py  test_llmlingua_summarizer.py  test_markdown_traverser.py  test_optimizer.py  test_query_executor.py  test_text_traverser.py  test_truncation_summarizer.py
(+22 files in other folders)
