[project]
name = "mcp-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.0",
    "alembic>=1.17.2",
    "click>=8.3.1",
    "datamodel-code-generator[http]>=0.45.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.24.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.5",
    "fastembed>=0.7.4",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.38.0",
    "watchfiles>=1.1.1",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.12.0",
    "semver>=3.0.4",
]

[dependency-groups]
dev = [
    "greenlet>=3.3.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
    "ty>=0.0.5",
    "pytest-cov>=7.0.0",
]
security = [
    "bandit[toml]>=1.9.2",
    "pip-audit>=2.10.0",
    "cyclonedx-bom>=7.2.1",
]
examples = [
    "anthropic>=0.75.0",
    "pydantic-ai>=1.36.0",
    "matplotlib>=3.10.8",
    "rich>=14.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
mcp-optimizer = { workspace = true }

[project.scripts]
mcpo = "mcp_optimizer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_optimizer"]

[tool.ruff]
line-length = 100
target-version = "py313"
lint.select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
]
lint.ignore = []
exclude = ["src/mcp_optimizer/toolhive/api_models"]

[tool.ty.src]
exclude = ["tests", "examples"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-config",
    "-v",
    "--cov=mcp_optimizer",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.alembic]
# Directory where migration scripts are stored.
script_location = "%(here)s/migrations"

# template used to generate migration file names
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"

# timezone to use when rendering the date within the migration file as well as the filename.
timezone = "UTC"

# max length of characters to apply to the "slug" field
truncate_slug_length = "50"
